Don't cache the result of GetPointFromOffset if it failed, since subsequent queries for that offset will return the bogus offset. bug 334608, r+sr=roc